--- a/client/index.html
+++ b/client/index.html
@@ -43,10 +43,14 @@
     <section id="router-view" class="row">
       <!-- primary viewport -->
       <div class="col-2"></div>
-      <div class="col-8 bg-dark post-div">
-        <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim iusto cum molestias, vitae dolores facere
-          eveniet eum autem veritatis ducimus repellat laborum exercitationem assumenda sit numquam odit officia
-          aliquam. Ratione!</P>
+      <div class="col-8  post-div">
+        <section id="post-area" class="row">
+          <div class="col-12 p-3">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae, ipsum rerum quae aperiam sunt
+              cumque eum quasi minima odio, repellendus sint atque accusamus, laboriosam neque consequuntur ab nostrum
+              error.</p>
+          </div>
+        </section>
       </div>
       <div class="col-2"></div>
     </section>
