kinda works cool :}

--- a/client/index.html
+++ b/client/index.html
@@ -45,11 +45,26 @@
       <div class="col-2"></div>
       <div class="col-8  post-div">
         <section id="post-area" class="row">
-          <div class="col-12 p-3">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae, ipsum rerum quae aperiam sunt
-              cumque eum quasi minima odio, repellendus sint atque accusamus, laboriosam neque consequuntur ab nostrum
-              error.</p>
-          </div>
+          <!-- <div class="col-12 p-3 d-flex shadow post">
+            <div class="p-2">
+              <img class="profile-img rounded-circle"
+                src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?auto=format&fit=crop&q=60&w=500&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8ZmFjZXxlbnwwfHwwfHx8MA%3D%3D"
+                alt="">
+              <p>name</p>
+            </div>
+            <div class="p-2">
+              <h5>Lorem ipsum dolor sit amet.</h5>
+              <p class="small-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa vitae, ipsum rerum
+                quae
+                aperiam sunt
+                cumque eum quasi minima odio, repellendus sint atque accusamus, laboriosam neque consequuntur ab nostrum
+                error.</p>
+              <i class="mdi mdi-heart"></i>
+              <i class="mdi mdi-heart-outline"></i>
+              <i class="mdi mdi-heart-broken"></i>
+              <i class="mdi mdi-heart-broken-outline"></i>
+            </div>
+          </div> -->
         </section>
       </div>
       <div class="col-2"></div>
