--- a/client/index.html
+++ b/client/index.html
@@ -42,7 +42,11 @@
 
     <section id="router-view" class="row">
       <!-- primary viewport -->
-      <div class="col-2"></div>
+      <div class="col-2 p-3">
+        <div class="card p-2 text-center">
+          sort
+        </div>
+      </div>
       <div class="col-8  post-div">
         <section id="post-area" class="row">
           <!-- <div class="col-12 p-3 d-flex shadow post">
@@ -67,7 +71,11 @@
           </div> -->
         </section>
       </div>
-      <div class="col-2"></div>
+      <div class="col-2 p-3">
+        <div class="card p-2 text-center">
+          profile
+        </div>
+      </div>
     </section>
 
 
