--- a/client/index.html
+++ b/client/index.html
@@ -74,12 +74,50 @@
       <div class="col-2 p-3">
         <div class="card p-2 text-center">
           profile
+          <button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Post<i class="mdi mdi-plus"></i>
+          </button>
         </div>
       </div>
     </section>
 
 
   </main>
+
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <form onsubmit="app.PostsController.createPost(event)">
+            <div class="form-floating mb-2">
+              <input type="text" class="form-control" id="postTitle" placeholder="Post Title here..." name="postTitle"
+                maxlength="50" required>
+              <label for="postTitle">Post Title</label>
+            </div>
+            <div class="form-floating mb-2">
+              <input type="text" class="form-control" id="postBody" placeholder="postBody here..." name="postBody"
+                maxlength="250" required>
+              <label for="postBody">Description</label>
+            </div>
+            <div class="form-floating ">
+              <input type="url" class="form-control" id="imgUrl" placeholder="Password" name="imgUrl">
+              <label for="imgUrl">Image Url</label>
+            </div>
+            <div class="text-end mt-2">
+              <button type="submit" class="btn btn-danger">Submit</button>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="https://cdn.auth0.com/js/auth0-spa-js/1.22/auth0-spa-js.production.js"></script>
