should be good??????????????

--- a/client/index.html
+++ b/client/index.html
@@ -107,6 +107,14 @@
               <input type="url" class="form-control" id="imgUrl" placeholder="Password" name="imgUrl">
               <label for="imgUrl">Image Url</label>
             </div>
+            <div>
+              <select class="form-select" aria-label="Default select example" man>
+                <option selected>Open this select menu</option>
+                <option value="app.PostsController.getCategory('wizards')">wizards</option>
+                <option value="app.PostsController.getCategory('spells')">spells</option>
+                <option value="app.PostsController.getCategory('questions')">questions</option>
+              </select>
+            </div>
             <div class="text-end mt-2">
               <button type="submit" class="btn btn-danger">Submit</button>
             </div>
