--- a/client/index.html
+++ b/client/index.html
@@ -103,7 +103,7 @@
                 maxlength="250" required>
               <label for="postBody">Description</label>
             </div>
-            <div class="form-floating ">
+            <div class="form-floating mb-2">
               <input type="url" class="form-control" id="imgUrl" placeholder="Password" name="imgUrl">
               <label for="imgUrl">Image Url</label>
             </div>
