--- a/client/index.html
+++ b/client/index.html
@@ -108,7 +108,7 @@
               <label for="imgUrl">Image Url</label>
             </div>
             <div>
-              <select class="form-select" aria-label="Default select example" man>
+              <select class="form-select" aria-label="Default select example" name="categoryId">
                 <option selected>Open this select menu</option>
                 <option value="app.PostsController.getCategory('wizards')">wizards</option>
                 <option value="app.PostsController.getCategory('spells')">spells</option>
