--- a/client/index.html
+++ b/client/index.html
@@ -108,11 +108,11 @@
               <label for="imgUrl">Image Url</label>
             </div>
             <div>
-              <select class="form-select" aria-label="Default select example" name="categoryId">
+              <select class="form-select" aria-label="Default select example" name="categoryId" required>
                 <option selected>Open this select menu</option>
-                <option value="app.PostsController.getCategory('wizards')">wizards</option>
-                <option value="app.PostsController.getCategory('spells')">spells</option>
-                <option value="app.PostsController.getCategory('questions')">questions</option>
+                <option value="wizards">wizards</option>
+                <option value="spells">spells</option>
+                <option value="questions">questions</option>
               </select>
             </div>
             <div class="text-end mt-2">
