--- a/client/index.html
+++ b/client/index.html
@@ -108,7 +108,7 @@
               <label for="imgUrl">Image Url</label>
             </div>
             <div>
-              <select class="form-select" aria-label="Default select example" name="categoryId" required>
+              <select class="form-select" aria-label="Default select example" name="categoryName" required>
                 <option selected>Open this select menu</option>
                 <option value="wizards">wizards</option>
                 <option value="spells">spells</option>
