--- a/client/index.html
+++ b/client/index.html
@@ -110,9 +110,9 @@
             <div>
               <select class="form-select" aria-label="Default select example" name="categoryName" required>
                 <option selected>Open this select menu</option>
-                <option value="wizards">wizards</option>
-                <option value="spells">spells</option>
-                <option value="questions">questions</option>
+                <option value="Wizards">wizards</option>
+                <option value="Spells">spells</option>
+                <option value="Questions">questions</option>
               </select>
             </div>
             <div class="text-end mt-2">
