dark theme no purple

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <!-- SECTION -->
-  <header class="sticky-top border-bottom">
+  <header class="sticky-top border-bottom border-dark">
     <div class="container-fluid">
       <section class="row side-background">
         <div class="col-12 text-center text-white p-3">
@@ -34,7 +34,7 @@
 
     <section id="router-view" class="row">
       <!-- primary viewport -->
-      <div class="col-2 side-background border-end rounded p-3 d-flex justify-content-center text-white">
+      <div class="col-2 side-background border-end border-dark rounded p-3 d-flex justify-content-center text-white">
         <div class="dropdown">
           <button class="btn post post-background dropdown-toggle text-white" type="button" id="dropdownMenuButton"
             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -71,7 +71,7 @@
           </div> -->
         </section>
       </div>
-      <div class="col-2 p-3 border-start rounded side-background text-white">
+      <div class="col-2 p-3 border-start border-dark rounded side-background text-white">
         <div class="card p-2 main-background post text-center">
           <div class="flex-column align-items-center d-flex p-3" id="authstate">
 
