--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
     <div class="container-fluid">
       <section class="row side-background">
         <div class="col-12 text-center text-white p-3">
-          <h1>SpellBook</h1>
+          <h1>SpellBook <i class="mdi text-purple mdi-wizard-hat"></i></h1>
         </div>
       </section>
     </div>
@@ -36,7 +36,7 @@
       <!-- primary viewport -->
       <div class="col-2 side-background border-end border-dark rounded p-3 d-flex justify-content-center text-white">
         <div class="dropdown">
-          <button class="btn post post-background dropdown-toggle text-white" type="button" id="dropdownMenuButton"
+          <button class="btn post button-purple dropdown-toggle text-white" type="button" id="dropdownMenuButton"
             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Categories
           </button>
@@ -76,7 +76,7 @@
           <div class="flex-column align-items-center d-flex p-3" id="authstate">
 
           </div>
-          <button type="button" class="btn post-background text-white" data-bs-toggle="modal"
+          <button type="button" class="btn button-purple text-white" data-bs-toggle="modal"
             data-bs-target="#exampleModal">
             Post<i class="mdi mdi-plus"></i>
           </button>
