--- a/client/index.html
+++ b/client/index.html
@@ -35,16 +35,16 @@
     <section id="router-view" class="row">
       <!-- primary viewport -->
       <div class="col-2 side-background border-end border-dark rounded p-3 d-flex justify-content-center text-white">
+
         <div class="dropdown">
           <button class="btn post button-purple dropdown-toggle text-white" type="button" id="dropdownMenuButton"
-            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Categories
           </button>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
+          <div id="category-buttons" class="dropdown-menu main-background text-white"
+            aria-labelledby="dropdownMenuButton">
           </div>
+
         </div>
       </div>
       <div class="col-8 main-background rounded text-white post-div">
